--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "front-producto",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://springmongodb-production.up.railway.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
